// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: CampaignLinks should render a new button 1`] = `
<div
  className="base-link-group nice-btn-group"
>
  <a
    className="cursor-pointer nice-btn icon fa-plus"
    href="/campaign/new"
    onClick={[Function]}
  >
    New
  </a>
</div>
`;

exports[`Component: CampaignLinks should render without props 1`] = `null`;

exports[`Component: CampaignLinks should show a view and edit button 1`] = `
<div
  className="base-link-group nice-btn-group"
>
  <a
    className="cursor-pointer nice-btn icon fa-eye"
    href="/campaign/show/10"
    onClick={[Function]}
  >
    View
  </a>
  <a
    className="cursor-pointer nice-btn icon fa-pencil"
    href="/campaign/edit/10"
    onClick={[Function]}
  >
    Edit
  </a>
</div>
`;

exports[`Component: CampaignLinks should show only a view button 1`] = `
<div
  className="base-link-group nice-btn-group"
>
  <a
    className="cursor-pointer nice-btn icon fa-eye"
    href="/campaign/show/10"
    onClick={[Function]}
  >
    View
  </a>
</div>
`;
